--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,10 +265,10 @@ h6 {
 }
 
 #hero p span {
-  color: #fff;
+  color: #149ddd;
   padding-bottom: 4px;
   letter-spacing: 1px;
-  border-bottom: 3px solid #149ddd;
+  /* border-bottom: 3px solid #149ddd; */
 }
 
 @media (min-width: 1024px) {
